@@ -1,3 +1,6 @@
+2007-03-20  Karl Runge <runge@karlrunge.com>
+	* libvncserver/httpd.c: Add "Connection: close" to HTTP replies.
+
 2007-03-17  Charles Coffing  <cconffing@novell.com>
 	* libvncserver: fix a locking issue
 
